--- a/index.html
+++ b/index.html
@@ -5,24 +5,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
+  <div class="container">
     <header>
       <h1>Password Generator</h1>
     </header>
     <h2>Generate a Password</h2>
-    <textarea
-      readonly
-      id="password"
-      placeholder="Your Secure Password"
-      aria-label="Generated Password"
-    ></textarea>
+    <div class="row">
+      <div class="col-xl-6">
+        <div class="jumbotron jumbotron-fluid">
+          <div class="container">
+            <h1 class="display-4">Your Password</h1>
+            <p class="lead"></p>
+          </div>
+        </div>
     <button id="generate">Generate Password</button>
     <button id="copy">
       Copy to Clipboard
     </button>
+  
+</div>
+<!--Length Dropdown Menu-->
+<label>
+    <div class="form-group">
+        <select class="custom-select" required>
+          <option value="">Length (8-128 characters)</option>
+          <option value="1">8</option>
+          <option value="2">9</option>
+          <option value="3">10</option>
+          <option value="3">11</option>
+          <option value="3">12</option>
+          <option value="3">13</option>
+          <option value="3">14</option>
+          <option value="3">15</option>
+        </select>
+      </div>
+<!--Special Characters-->
+<div class="col-md-8">
+<div class="form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Special characters (e.g. @#$%*&)</label>
+  </div>
+<!--Numeric Characters-->
+<div class="form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Numeric characters (e.g. 1234567)</label>
+  </div>
+<!--Lowercase Characters-->
+<div class="form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Lowercase characters (e.g. abcdefg)</label>
+  </div>
+<!--Upperchase Characters-->
+<div class="form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Uppercase characters (e.g. ABCDEFG)</label>
+  </div>
+</div>
+<!--Input checkboxes end-->  
+  </label>
+  </div>
+    </div>
 
-    <script type = "text/javascript" src = "script.js"></script>
+<script type = "text/javascript" src = "script.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 </html>
