began js script

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
       <h1>Password Generator</h1>
     </header>
     <h2>Generate a Password</h2>
+
     <div class="row">
       <div class="col-xl-6">
+  <!--Password Display Box-->
         <div class="jumbotron jumbotron-fluid">
           <div class="container">
             <h1 class="display-4">Your Password</h1>
@@ -29,6 +31,7 @@
   
 </div>
 <!--Length Dropdown Menu-->
+<div class="col-md-6">
 <label>
     <div class="form-group">
         <select class="custom-select" required>
@@ -36,15 +39,22 @@
           <option value="1">8</option>
           <option value="2">9</option>
           <option value="3">10</option>
-          <option value="3">11</option>
-          <option value="3">12</option>
-          <option value="3">13</option>
-          <option value="3">14</option>
-          <option value="3">15</option>
+          <option value="4">11</option>
+          <option value="5">12</option>
+          <option value="6">13</option>
+          <option value="7">14</option>
+          <option value="8">15</option>
+          <option value="9">16</option>
+          <option value="10">17</option>
+          <option value="11">18</option>
+          <option value="12">19</option>
+          <option value="13">20</option>
+          <option value="14">21</option>
+          <option value="15">22</option>
+          <option value="16">23</option>
         </select>
       </div>
 <!--Special Characters-->
-<div class="col-md-8">
 <div class="form-check">
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
     <label class="form-check-label" for="exampleCheck1">Special characters (e.g. @#$%*&)</label>
@@ -52,7 +62,7 @@
 <!--Numeric Characters-->
 <div class="form-check">
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Numeric characters (e.g. 1234567)</label>
+    <label class="form-check-label" for="exampleCheck1">Numeric characters (e.g. 1234567890)</label>
   </div>
 <!--Lowercase Characters-->
 <div class="form-check">
